<package format="2">
  <name>bolt_2d</name>
  <version>0.0.1</version>
  <description>
    Research
  </description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bolt_2d</url>
  <url type="bugtracker">https://github.com/davetcoleman/bolt_2d/issues</url>
  <url type="repository">https://github.com/davetcoleman/bolt_2d/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ompl_visual_tools</depend>
  <depend>roscpp</depend>
  <depend>ompl</depend>
  <depend>libgflags-dev</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>bolt_core</depend>

  <export>
  </export>
</package>
