<package format="2">
  <name>bolt_2d</name>
  <version>0.1.0</version>
  <description>
    Research
  </description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bolt_2d</url>
  <url type="bugtracker">https://github.com/davetcoleman/bolt_2d/issues</url>
  <url type="repository">https://github.com/davetcoleman/bolt_2d/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz_visual_tools</depend>
  <depend>moveit_dashboard</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>ompl</depend>
  <depend>libgflags-dev</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>bolt_core</depend>
  <depend>bolt_ros</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
