<?xml version="1.0"?>
<package format="2">
  <name>bolt_baxter</name>
  <version>0.1.0</version>
  <description>Demonstrate dual arm manipulation using a combination of free space and Cartesian planning</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/bolt</url>
  <url type="butracker">https://github.com/davetcoleman/bolt/issues</url>
  <url type="repository">https://github.com/davetcoleman/bolt/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bolt_moveit</depend>
  <depend>roslint</depend>
  <depend>ompl</depend>
  <depend>geometric_shapes</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
