<?xml version="1.0"?>
<package format="2">
  <name>bolt_core</name>
  <version>0.0.1</version>
  <description>The bolt_core package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/bolt_core</url>
  <url type="butracker">https://github.com/davetcoleman/bolt_core/issues</url>
  <url type="repository">https://github.com/davetcoleman/bolt_core/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ompl</depend>
  <depend>valgrind</depend>

  <export>
  </export>
</package>
