<?xml version="1.0"?>
<package format="2">
  <name>bolt_hilgendorf</name>
  <version>0.0.1</version>
  <description>Demonstrate dual arm manipulation using a combination of free space and Cartesian planning</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/bolt</url>
  <url type="butracker">https://github.com/davetcoleman/bolt/issues</url>
  <url type="repository">https://github.com/davetcoleman/bolt/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>moveit_boilerplate</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ompl</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>ompl_visual_tools</depend>
  <depend>bolt_core</depend>
  <depend>eigen</depend>
  <depend>cmake_modules</depend>
  <depend>pluginlib</depend>
  <depend>tf_conversions</depend>
  <depend>descartes_core</depend>
  <depend>descartes_planner</depend>
  <depend>descartes_moveit</depend>
  <depend>bolt_ur5</depend>

  <export>
  </export>
</package>
