<?xml version="1.0"?>
<package format="2">
  <name>bolt_moveit</name>
  <version>0.0.1</version>
  <description>Demonstrate dual arm manipulation using a combination of free space and Cartesian planning</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/bolt</url>
  <url type="butracker">https://github.com/davetcoleman/bolt/issues</url>
  <url type="repository">https://github.com/davetcoleman/bolt/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>moveit_boilerplate</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ompl</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>bolt_core</depend>
  <depend>eigen</depend>
  <depend>cmake_modules</depend>
  <depend>pluginlib</depend>
  <depend>tf_conversions</depend>
  <depend>roslint</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>roslint</test_depend>

  <export>
  </export>
</package>
